# storage/api-docs/api-docs.json
@@ -14,7 +14,7 @@
     },
     "servers": [
         {
-            "url": "http://localhost:8000/api"
+            "url": "http://localhost:8000/"
         }
     ],
     "paths": {
@@ -514,38 +514,6 @@
                 }
             }
         },
-        "/": {
-            "get": {
-                "tags": [
-                    "Base"
-                ],
-                "summary": "Get welcome message",
-                "description": "Get welcome message",
-                "operationId": "welcome",
-                "responses": {
-                    "200": {
-                        "description": "Succes",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Message"
-                                }
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Error"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/register": {
             "post": {
                 "tags": [
@@ -576,7 +544,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/User"
+                                    "$ref": "#/components/schemas/AuthResponse"
                                 }
                             }
                         }
@@ -729,10 +697,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/User"
-                                    }
+                                    "$ref": "#/components/schemas/User"
                                 }
                             }
                         }
